chore: finish task list

--- a/20220619.md
+++ b/20220619.md
@@ -1,7 +1,6 @@
 ### 在云端
-
-+ stability - 稳定
-+ count on - 依靠
-+ doubt - 怀疑
-+ stable - 稳定的
+- [x] stability - 稳定
+- [x] count on - 依靠
+- [x] doubt - 怀疑
+- [x] stable - 稳定的
 
